@@ -189,6 +189,8 @@ Unreleased changes (1.0-dev)
 
 65. NUTCH-597 - NPE in Fetcher2 (Remco Verhoef via ab)
 
+66. NUTCH-584 - urls missing from fetchlist (Ruslan Ermilov, ab)
+
 
 Release 0.9 - 2007-04-02
 
